client/css/style.css
/* ... */
h2.name {
    color: #2C3E50;
    font-weight: bold;
    text-decoration: underline;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

h3 {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.aboutHeader2 {
    background-color: #2C3E50;
    text-align: center;
    align-self: center;
    margin-left: auto;
    margin-right: auto;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.aboutHeader {
    background-color: #2C3E50;
    height: 100px !important; 
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    
}

.parallax {
    /* The image used */
    background-image: url('/css/img/wallpaper.jpg');

    /* Full height */
    height: 100%; 

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.parallax2 {
    /* The image used */
    background-image: url('/css/img/wallpaper2.jpg');

    /* Full height */
    height: 100%; 

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.parallax3 {
    /* The image used */
    background-image: url('/css/img/wallpaper4.jpg');

    /* Full height */
    height: 100%; 

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.parallax4 {
    /* The image used */
    background-image: url('/css/img/wallpaper5.jpg');

    /* Full height */
    height: 100%; 

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
@media only screen and (max-device-width: 1024px) {
    .parallax {
        background-attachment: scroll;
    }
    .parallax2 {
        background-attachment: scroll;
    }
    .parallax3 {
        background-attachment: scroll;
    }
    .parallax4 {
        background-attachment: scroll;
    }
}

.detailsModal {
    min-height: 480px;
}

.modal-title {
    color: white;
}

.editQaABody {
    height: 350px;
}

.editQaADescription {
    height: 100px;
}

textarea {
    resize: none;
}

.checkImg {
    width: 20px;
    height: 20px;
    display: none;
}

